--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -2,10 +2,10 @@
   "builders":
   [
     {
-      "subscription_id": "{{ subscriptionid }}",
-      "tenant_id": "{{ tenantId }}",
-      "client_id": "{{ clientId }}",
-      "client_secret": "{{ clientSecret }}",
+      "subscription_id": "{{ SUBSCRIPTION_ID }}",
+      "tenant_id": "{{ TENANT_ID }}",
+      "client_id": "{{ CLIENT_ID }}",
+      "client_secret": "{{ CLIENT_SECRET }}",
       "type": "azure-arm",
       "os_type": "Linux",
       "vm_size": "Standard_D8s_v3",
