--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -13,8 +13,8 @@
       "image_offer": "0001-com-ubuntu-server-focal",
       "image_sku": "20_04-lts",
       "shared_image_gallery_destination": {
-        "resource_group": "azmanagers-unittesting",
-        "gallery_name": "dummysig",
+        "resource_group": "{{ env['RESOURCE_GROUP'] }}",
+        "gallery_name": "{{ env['SIG_NAME'] }}",
         "image_name": "unit-test-image",
         "image_version": "1.0",
         "replication_regions": ["South Central US"]
