--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -18,7 +18,8 @@
         "image_name": "unit-test-image",
         "image_version": "1.0.0",
         "replication_regions": ["South Central US"]
-      },    
+      },
+      "shared_image_gallery_destination": "120m",
       "build_resource_group_name": "{{ env['RESOURCE_GROUP'] }}",
       "managed_image_resource_group_name": "{{ env['RESOURCE_GROUP'] }}",
       "managed_image_name": "unit-test-image",
