--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -29,7 +29,7 @@
       "virtual_network_resource_group_name": "azmanagers-unittesting",
       "private_virtual_network_with_public_ip": true,
       "ssh_username": "cvx",
-      "ssh_private_key_file": "~/.ssh/id_rsa"
+      "ssh_private_key_file": "/home/runner/.ssh/id_rsa"
     }
   ],
   "provisioners":
