--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -28,7 +28,8 @@
       "virtual_network_subnet_name": "dummy-subnet",
       "virtual_network_resource_group_name": "azmanagers-unittesting",
       "private_virtual_network_with_public_ip": true,
-      "ssh_username": "cvx"
+      "ssh_username": "cvx",
+      "ssh_password": "{{ env['SSH_PASS'] }}"
     }
   ],
   "provisioners":
