--- a/templates/azmanagers-setup.jl.j2
+++ b/templates/azmanagers-setup.jl.j2
@@ -4,6 +4,9 @@ resourcegroup = "{{ env['RESOURCE_GROUP'] }}"
 {# credentials = JSON.parse( {{ env['AZURE_CREDENTIALS'] }} ) #}
 subscriptionid = "{{ env['SUBSCRIPTION_ID'] }}"
 templatename = "cbox02"
+client_id = "{{ env['CLIENT_ID'] }}"
+client_secret = "{{ env['CLIENT_SECRET'] }}"
+tenant_id = "{{ env['TENANT_ID'] }}"
 
 sstemplate = AzManagers.build_sstemplate(
         templatename,
@@ -19,5 +22,5 @@ sstemplate = AzManagers.build_sstemplate(
 
 AzManagers.save_template_scaleset(templatename, sstemplate)
 
-AzSessions.write_manifest(;client_id="{{ env['CLIENT_ID'] }}", client_secret="{{ env['CLIENT_SECRET'] }}", tenant="{{ env['TENANT_ID'] }}")
+AzSessions.write_manifest(;client_id=client_id, client_secret=client_secret, tenant=tenant_id)
 AzManagers.write_manifest(;resourcegroup=resourcegroup, subscriptionid=subscriptionid, ssh_user="cvx")
