full test with changed vnet name in setup script

--- a/templates/azmanagers-setup.jl.j2
+++ b/templates/azmanagers-setup.jl.j2
@@ -14,7 +14,7 @@ sstemplate = AzManagers.build_sstemplate(
         location             = "southcentralus",
         resourcegroup        = resourcegroup,
         resourcegroup_vnet   = resourcegroup,
-        vnet                 = "default-vnet",
+        vnet                 = "{{ env['RESOURCE_GROUP'] }}-vnet",
         subnet               = "default",
         imagegallery         = "{{ env['SIG_NAME'] }}",
         imagename            = "unit-test-image",
