--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -85,7 +85,7 @@
         "export PATH=\"${PATH}:/opt/julia/bin\"",
         "echo \"installing julia packages\"",
         "export JULIA_MPI_BINARY=\"system\"",
-        "julia -e 'using Pkg; pkg\"add AzSessions AzManagers#{{ env['BRANCH_NAME'] }} Distributed JSON HTTP Test Random\"'",
+        "julia -e 'using Pkg; pkg\"add AzSessions AzManagers#{{ env['COMMIT_SHA'] }} Distributed JSON HTTP Test Random\"'",
         "julia -e 'using Pkg; pkg\"precompile\"'",
         
         "echo \"running julia setup\"",
