testing rough draft code cov

--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -72,6 +72,11 @@
       "destination": "/home/cvx/azmanagers-setup.jl"
     },
     {
+      "type": "file",
+      "source": "/home/runner/work/AzManagers.jl/AzManagers.jl/src/julia-codecov.jl",
+      "destination": "/home/cvx/julia-codecov.jl"
+    },
+    {
       "type": "shell",
       "inline":
       [
