--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -73,7 +73,7 @@
     },
     {
       "type": "file",
-      "source": "/home/runner/work/AzManagers.jl/AzManagers.jl/src/julia-codecov.jl",
+      "source": "/home/runner/work/AzManagers.jl/AzManagers.jl/test/julia-codecov.jl",
       "destination": "/home/cvx/julia-codecov.jl"
     },
     {
