--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -49,10 +49,6 @@
       "type": "shell",
       "inline":
       [
-        "echo \"waiting 180 seconds for cloud-init to update /etc/apt/sources.list\"",
-        "timeout 180 /bin/bash -c 'until stat /var/lib/cloud/instance/boot-finished 2>/dev/null; do echo waiting ...; sleep 1; done'",
-        "echo \"running apt-get update ...\"",
-        "cat /etc/apt/sources.list",
         "sudo apt-get -y update",
         "sudo DEBIAN_FRONTEND=noninteractive apt-get -y -o Dpkg::Options::=\"--force-confdef\" -o Dpkg::Options::=\"--force-confold\" upgrade",
         "sudo apt-get -y install build-essential mpich libcurl4-openssl-dev emacs-nox nodejs npm git vim",
@@ -94,7 +90,7 @@
         "export PATH=\"${PATH}:/opt/julia/bin\"",
         "echo \"installing julia packages\"",
         "export JULIA_MPI_BINARY=\"system\"",
-        "julia -e 'using Pkg; pkg\"add AzSessions AzManagers#{{ env['COMMIT_SHA'] }} Distributed JSON HTTP Test Random\"'",
+        "julia -e 'using Pkg; pkg\"add AzSessions AzManagers#{{ env['COMMIT_SHA'] }} Distributed JSON HTTP Test Random Coverage\"'",
         "julia -e 'using Pkg; pkg\"precompile\"'"
       ]
     }
