--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -49,6 +49,7 @@
       "type": "shell",
       "inline":
       [
+        "sudo apt-get -y clean",
         "sudo apt-get -y update",
         "sudo DEBIAN_FRONTEND=noninteractive apt-get -y -o Dpkg::Options::=\"--force-confdef\" -o Dpkg::Options::=\"--force-confold\" upgrade",
         "sudo apt-get -y install build-essential mpich libcurl4-openssl-dev emacs-nox nodejs npm git vim",
