moved build file to vm v2

--- a/templates/cofii-base.json-copy.j2
+++ b/templates/cofii-base.json-copy.j2
@@ -68,6 +68,16 @@
       ]
     },
     {
+      "type": "file",
+      "source": "/home/runner/work/AzManagers.jl/AzManagers.jl/templates/azmanagers-setup.jl",
+      "destination": "/home/cvx/azmanagers-setup.jl"
+    },
+    {
+      "type": "file",
+      "source": "/home/runner/work/AzManagers.jl/AzManagers.jl/test/julia-codecov.jl",
+      "destination": "/home/cvx/julia-codecov.jl"
+    },
+    {
       "type": "shell",
       "inline":
       [
