testing with original image .j2

--- a/templates/cofii-base.json.j2
+++ b/templates/cofii-base.json.j2
@@ -49,15 +49,10 @@
       "type": "shell",
       "inline":
       [
-        {# "sleep 30s",
         "sudo apt-get -y clean",
-        "sleep 30s",
         "sudo apt-get -y update",
-        "sleep 30s",
         "sudo DEBIAN_FRONTEND=noninteractive apt-get -y -o Dpkg::Options::=\"--force-confdef\" -o Dpkg::Options::=\"--force-confold\" upgrade",
-        "sleep 30s",
-        "sudo apt-get -y install build-essential mpich libcurl4-openssl-dev emacs-nox nodejs npm git vim",
-        "sleep 30s", #}
+        {# "sudo apt-get -y install build-essential mpich libcurl4-openssl-dev emacs-nox nodejs npm git vim", #}
         "sudo sed -i '1 i *     soft    nofile  1000000' /etc/security/limits.conf",
         "sudo sed -i '1 i *     hard    nofile  1000000' /etc/security/limits.conf",
         "sudo sed -i '1 i fs.inotify.max_user_watches=65536' /etc/sysctl.conf",
@@ -71,6 +66,16 @@
       [
         "sudo wget https://julialang-s3.julialang.org/bin/linux/x64/{{ env['JULIA_VERSION'] }}/julia-{{ env['JULIA_VERSION'] }}.0-linux-x86_64.tar.gz"
       ]
+    },
+    {
+      "type": "file",
+      "source": "/home/runner/work/AzManagers.jl/AzManagers.jl/templates/azmanagers-setup.jl",
+      "destination": "/home/cvx/azmanagers-setup.jl"
+    },
+    {
+      "type": "file",
+      "source": "/home/runner/work/AzManagers.jl/AzManagers.jl/test/julia-codecov.jl",
+      "destination": "/home/cvx/julia-codecov.jl"
     },
     {
       "type": "shell",
