--- a/test/templates/azmanagers-setup.jl.j2
+++ b/test/templates/azmanagers-setup.jl.j2
@@ -12,6 +12,7 @@ templatename = "cbox02"
 sstemplate = AzManagers.build_sstemplate(
         templatename,
         subscriptionid       = subscriptionid,
+        admin_username       = "cvx",
         location             = "southcentralus",
         resourcegroup        = resourcegroup,
         resourcegroup_vnet   = resourcegroup,
@@ -24,6 +25,7 @@ sstemplate = AzManagers.build_sstemplate(
 vmtemplate = AzManagers.build_vmtemplate(
         templatename,
         subscriptionid       = subscriptionid,
+        admin_username       = "cvx",
         location             = "southcentralus",
         resourcegroup        = resourcegroup,
         resourcegroup_vnet   = resourcegroup,
