--- a/test/templates/cofii-base.json.j2
+++ b/test/templates/cofii-base.json.j2
@@ -10,8 +10,8 @@
       "os_type": "Linux",
       "vm_size": "Standard_D8s_v3",
       "image_publisher": "canonical",
-      "image_offer": "0001-com-ubuntu-server-focal",
-      "image_sku": "20_04-lts",
+      "image_offer": "0001-com-ubuntu-server-jammy",
+      "image_sku": "22_04-lts-gen2",
       "shared_image_gallery_destination": {
         "resource_group": "{{ env['RESOURCE_GROUP'] }}",
         "gallery_name": "{{ env['GALLERY_NAME'] }}",
