--- a/test/templates/cofii-base.json.j2
+++ b/test/templates/cofii-base.json.j2
@@ -54,6 +54,7 @@
         "sudo mkdir -p /opt/julia",
         "cd /tmp"
       ]
+      max_retries = 5
     },
     {
       "type": "shell",
@@ -84,6 +85,7 @@
         "julia -e 'using Pkg; pkg\"add AzSessions AzManagers#{{ env['COMMIT_SHA'] }} Coverage Distributed HTTP JSON MPI MPIPreferences Random Test\"'",
         "julia -e 'using MPIPreferences; MPIPreferences.use_jll_binary(\"MPICH_jll\")'"
       ]
+      max_retries = 5
     }
   ]
 }
